2008-02-20  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c: (gdk_window_set_decorations): Set
	the right window level and shadow after recreating the window.

	* gdk/quartz/GdkQuartzView.c: (drawRect): Invalidate the shadow if
	necessary after drawing (bug #517338).

2008-02-20  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* gtk/gtkbuilder.c (_gtk_builder_enum_from_string): fix missing
	call to g_type_class_unref in case of error. (#517563)

2008-02-18  Sven Neumann  <sven@gimp.org>

	* gtk/Makefile.am (STOCK_ICONS)
	* gtk/stock-icons/16/gtk-page-setup.png
	* gtk/stock-icons/24/gtk-page-setup.png: added page-setup icons
	taken from GNOME icon theme.

	* gtk/gtkstock.[ch]: added GTK_STOCK_PAGE_SETUP. Closes bug #514410.

2008-02-18  Runa Bhattacharjee <runabh@gmail.com>

	* configure.in: Added Kannada (kn) to ALL_LINGUAS

2008-02-17  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk-builder-convert (GtkBuilderConverter._add_action_from_menuitem): 
	When converting a stock item based on the label, remove the label property.

2008-02-17  Richard Hult  <richard@imendio.com>

	* gdk/quartz/GdkQuartzWindow.c: (showAndMakeKey): Update the
	position after showing the window since the window manager might
	not place it where we requested in the first places.

2008-02-17  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c: (show_window_internal),
	(_gdk_quartz_window_detach_from_parent),
	(_gdk_quartz_window_attach_to_parent), (gdk_window_focus): Clear
	the toplevel ordering list in all places where the order is
	potentially changed. Fixes mouse focus issues for windows with
	a transient parent set.

2008-02-17  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c
	(_gdk_quartz_events_update_mouse_window): Highlight the mouse
	window when event debugging is enabled.

2008-02-16  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c (create_scroll_event): Add state